fluxcd/k3s/traefik/minimal-ingress-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin
  namespace: default
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /gecko
